--- a/front-end/survey/styles/style.css
+++ b/front-end/survey/styles/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
 
 html, body {
-  background-color: #add63b;
+  background-color: #2b8c0e;
   text-align: center;
   font-family: 'Raleway', Helvetica, sans-serif;
   min-width: 320px;
@@ -35,8 +35,73 @@ html, body {
 
 .input-field {
   height: 20px;
+  width: 280px;
   padding: 5px;
   margin: 10px;
   border: 1px solid #x0x0x0;
   border-radius: 2px;
+}
+
+#age{
+  width: 40px;
+}
+
+.party, input[type="checkbox"] {
+  float: left;
+  margin-right: 5px;
+}
+
+#submit {
+  background-color: #0e838c;
+  border-radius: 4px;
+  color: white;
+  font-size: 1em;
+  height: 40px;
+  width: 96px;
+  margin: 10px;
+  border: 0px solid;
+}
+
+#dropdown {
+  height: 35px;
+  width: 140px;
+  padding: 5px;
+  margin: 10px;
+  margin-top: 15px;
+  border: 1px solid #c0c0c0;
+  border-radius: 2px;
+}
+
+.radio, .checkbox {
+  position: relative;
+  left: -43px;
+  margin-left: 10px;
+  display: block;
+  padding-bottom: 10px;
+}
+
+@media screen and (max-width: 833px) {
+  .input-field {
+    width: 80%;
+  }
+  select {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .labels {
+    width: 100%
+    text-align: left;
+  }
+  .rightTab {
+    width: 80%;
+    float: left;
+  }
+  .input-field {
+    width: 100%;
+  }
+  select {
+    width: 100%;
+  }
 }
