fix button values

--- a/front-end/survey/styles/style.css
+++ b/front-end/survey/styles/style.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
 
 html, body {
-  background-color: #2b8c0e;
+  background-color: #77a377;
   text-align: center;
   font-family: 'Raleway', Helvetica, sans-serif;
   min-width: 320px;
